GRAD2-3304 - fixes endpoint to use school id instead of mincode